--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                 <div class="mui-col-md-3 step">
                     <div class="step-number">4</div>
                     <h3>進捗確認</h3>
-                    <p>保護者がアプリで子どもの成長を見守ります。</p>
+                    <p>保護者がアプリで子どもの成長を見守ります</p>
                 </div>
             </div>
         </section>
