--- a/index.html
+++ b/index.html
@@ -39,16 +39,22 @@
                 <div class="mui-col-md-4 feature-card">
                     <i class="material-icons">assignment</i>
                     <h3>クエスト機能</h3>
+                    <img src="images/ludibit-quest-list-mobile.svg" alt="クエスト機能画像">
+
                     <p>お家に合わせたクエストを作成。子どもが楽しくクリアしながらお手伝いを学習できます。</p>
                 </div>
                 <div class="mui-col-md-4 feature-card">
                     <i class="material-icons">star</i>
                     <h3>ポイントシステム</h3>
+                    <img src="images/ludibit-quest-clear-mobile.svg" alt="クエスト機能画像">
+
                     <p>クエストをクリアしてポイントゲット！レベルアップで、お手伝いがもっと楽しくなります。</p>
                 </div>
                 <div class="mui-col-md-4 feature-card">
                     <i class="material-icons">emoji_events</i>
-                    <h3>バッジシステム</h3>
+                    <h3>報酬システム</h3>
+                    <img src="images/ludibit-reward-tickets-mobile.svg" alt="クエスト機能画像">
+
                     <p>努力に応じて、ご家庭で決めたクリア報酬やバッジを獲得できます。</p>
                 </div>
             </div>
@@ -76,8 +82,7 @@
         </section>
 
         <section id="how-it-works" class="mui-container">
-            <h2>Ludibitの実際の画面</h2>
-            <img src="images/mockup1.png" alt="Ludibitの実際の画面">
+            
 
             <h2>Ludibitの使い方</h2>
             <div class="mui-row">
