--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="hero-content">
                 <h1>お手伝いを楽しく学ぼう！</h1>
                 <p>ゲーム感覚で子供がお手伝いを楽しむアプリ</p>
-                <a href="https://lin.ee/e9EkcFh" class="mui-btn mui-btn--raised mui-btn--primary">LINE@に登録する</a>
+                <a href="https://lin.ee/qXIQ1Dj" class="mui-btn mui-btn--raised mui-btn--primary">LINE@に登録する</a>
                 <p>事前登録で限定セール情報を配信！</p>
             </div>
         </section>
@@ -113,7 +113,7 @@
 
         <section id="signup" class="mui-container mui--text-center">
             <h2>今すぐLudibitを始めよう！</h2>
-            <a href="https://lin.ee/e9EkcFh" class="mui-btn mui-btn--raised mui-btn--primary">LINE@に登録する</a>
+            <a href="https://lin.ee/qXIQ1Dj" class="mui-btn mui-btn--raised mui-btn--primary">LINE@に登録する</a>
             <p>事前登録で限定セール情報を配信！</p>
             <p class="small">※現在サービス準備中です。</p>
         </section>
